# ST-LIB

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  arm-none-eabi.cmake  build.sh  compile_commands.json  footer.html  header.html  intro.md  linux-64.cmake
.cache/clangd/index/: ADC.hpp.2D7AE6C9ECC06AD3.idx  CORDIC.hpp.4BA8FD1A48D11BD5.idx  Counter.hpp.EB2D5C642E114D83.idx  CppUtils.hpp.80B507770818BAFA.idx  DMA.hpp.58B44FA934E30E4C.idx  DatagramSocket.hpp.31EE9116EFD6DE96.idx  DigitalInputService.hpp.A005C6DF76196F7A.idx  DigitalOutput.hpp.74E1D95BF472C8F4.idx  DigitalOutputService.hpp.F52B4C2C7476C951.idx  DigitalSensor.hpp.4335558D1F2DA77B.idx  DualPWM.hpp.6CE100EEB550E549.idx  DualPhasedPWM.hpp.DACACF0FC32F3C50.idx  EXTI.hpp.E0F9DA990DAB23ED.idx  Encoder.hpp.5106964AE132F90C.idx  EncoderSensor.hpp.B7724B60EE6A11B8.idx  ErrorHandler.hpp.F7A3846848024A2D.idx  Ethernet.hpp.C1403C902A86A5A7.idx  EthernetNode.hpp.CDECD0CB287710D5.idx  FDCAN.hpp.22DCD4F3014C23E9.idx  Flash.hpp.47666DED44677D80.idx  Flash_Test.hpp.AAA42FCBCC38F0D6.idx  HALAL.hpp.A8C9F6D7AE43C8CA.idx  HALconfig.hpp.1BBBCB0FAF14EFE2.idx  HalfBridge.hpp.59F2C5E1E7468547.idx  IPV4.hpp.08310197EC88760D.idx  InputCapture.hpp.29E0D4EAE79D6A4E.idx  LinearSensor.hpp.F89B8349B1D2E44E.idx  LookupSensor.hpp.577481842EEB510D.idx  LowPowerTimer.hpp.7053E6D4E5442616.idx  Math.hpp.85AA4B0780E96A1C.idx  Order.hpp.169D476F1F6A2AF5.idx  PWM.hpp.72A130C130757DE3.idx  Packet.hpp.44321D5EA67E1769.idx  PacketValue.hpp.B7CAED42610F1346.idx  PhasedPWM.hpp.42731DD60C8DF691.idx  Pin.hpp.45BDDA8007547CDF.idx  Protection.hpp.9947BC28D00E2555.idx  ProtectionManager.hpp.00CB067E19096BE4.idx  RawPacket.hpp.3C3CAF5E9D8634D5.idx  SPI.hpp.CB7A0CCF7BC7A201.idx  (+158 more)
.github/workflows/: c-cpp.yml
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css  colors-org.eclipse.egit.ui-1849137576.css  colors-org.eclipse.epp.mpc.ui.css--1027399938.css  colors-org.eclipse.jdt.ui-326703266.css
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Debug/: makefile  objects.list  sources.mk
Debug/Src/: ST-LIB.d  subdir.mk
Debug/Src/HALAL/: HALAL.d  subdir.mk
Debug/Src/ST-LIB_HIGH/Protections/: Protection.d  ProtectionManager.d  subdir.mk
Debug/Src/ST-LIB_LOW/: ST-LIB_LOW.d  subdir.mk
Debug/Src/ST-LIB_LOW/Clocks/: Counter.d  Stopwatch.d  subdir.mk
Debug/Src/ST-LIB_LOW/ErrorHandler/: ErrorHandler.d  subdir.mk
Debug/Src/ST-LIB_LOW/Math/: Math.d  subdir.mk
Debug/Src/ST-LIB_LOW/StateMachine/: StateMachine.d  subdir.mk
Drivers/: Socket.hpp
Drivers/CMSIS/Include/: core_cm7.h  mpu_armv7.h
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_ll_adc.h
Inc/: ST-LIB-CORE.hpp  ST-LIB.hpp  main.h
Inc/C++Utilities/: CppImports.hpp  CppUtils.hpp  RingBuffer.hpp
Inc/HALAL/: HALAL.hpp
Inc/HALAL/Models/BoardID/: BoardID.hpp
Inc/HALAL/Models/Concepts/: Concepts.hpp
Inc/HALAL/Models/DMA/: DMA.hpp
Inc/HALAL/Models/DMAStream/: DMAStream.hpp
Inc/HALAL/Models/DataStructures/: StackTuple.hpp  TemplatePackFilter.hpp
Inc/HALAL/Models/HALconfig/: HALconfig.hpp
Inc/HALAL/Models/IPV4/: IPV4.hpp
Inc/HALAL/Models/LowPowerTimer/: LowPowerTimer.hpp
Inc/HALAL/Models/MPUManager/: MPUManager.hpp
Inc/HALAL/Models/Packets/: ForwardOrder.hpp  I2CPacket.hpp  Notification.hpp  Order.hpp  OrderProtocol.hpp  Packet.hpp  PacketValue.hpp  RawPacket.hpp  SPIOrder.hpp  SPIPacket.hpp
Inc/HALAL/Models/PacketsModel/: Packet.hpp  PacketValue.hpp
Inc/HALAL/Models/PinModel/: Pin.hpp
Inc/HALAL/Models/Runes/: Runes.hpp
Inc/HALAL/Models/TimerChannelModel/: TimerChannel.hpp
Inc/HALAL/Models/TimerPeripheral/: TimerPeripheral.hpp
Inc/HALAL/Services/ADC/: ADC.hpp
Inc/HALAL/Services/CORDIC/: CORDIC.hpp
Inc/HALAL/Services/Communication/: Packet.hpp  PacketValue.hpp
Inc/HALAL/Services/DigitalInput/: DigitalInput.hpp
Inc/HALAL/Services/DigitalInputService/: DigitalInputService.hpp
Inc/HALAL/Services/DigitalOutput/: DigitalOutput.hpp
Inc/HALAL/Services/EXTI/: EXTI.hpp
Inc/ST-LIB_HIGH/: ST-LIB_HIGH.hpp
Inc/ST-LIB_HIGH/Board/: Board.hpp
Inc/ST-LIB_HIGH/Control/: ControlBlock.hpp  ControlSystem.hpp  FeedbackControlBlock.hpp  SplitterBlock.hpp
Inc/ST-LIB_HIGH/FlashStorer/: FlashStorer.hpp  FlashVariable.hpp
Inc/ST-LIB_HIGH/Protections/: Boundary.hpp  Notification.hpp  Protection.hpp  ProtectionManager.hpp
Inc/ST-LIB_HIGH/Vehicle/: Vehicle.hpp
Inc/ST-LIB_LOW/: ST-LIB_LOW.hpp
Inc/ST-LIB_LOW/Clocks/: Counter.hpp  Stopwatch.hpp
Inc/ST-LIB_LOW/DigitalOutput/: DigitalOutput.hpp
Inc/ST-LIB_LOW/ErrorHandler/: ErrorHandler.hpp
Inc/ST-LIB_LOW/HalfBridge/: HalfBridge.hpp
Inc/ST-LIB_LOW/Math/: Math.hpp
Inc/ST-LIB_LOW/StateMachine/: HeapStateOrder.hpp  StackStateOrder.hpp  StateMachine.hpp  StateOrder.hpp
Inc/ST-LIB_LOW/Supercaps/: Supercaps.hpp
LWIP/App/: lwip.c  lwip.h
Src/: ST-LIB.cpp
Src/HALAL/: HALAL.cpp
Src/ST-LIB_HIGH/: ST-LIB_HIGH.cpp
Src/ST-LIB_HIGH/Board/: Board.cpp
Src/ST-LIB_HIGH/FlashStorer/: FlashStorer.cpp  FlashVariable.cpp
Src/ST-LIB_HIGH/Protections/: Boundary.cpp  Protection.cpp  ProtectionManager.cpp
Src/ST-LIB_HIGH/Vehicle/: Vehicle.cpp
Src/ST-LIB_LOW/: ST-LIB_LOW.cpp
Src/ST-LIB_LOW/Clocks/: Counter.cpp  Stopwatch.cpp
Src/ST-LIB_LOW/DigitalOutput/: DigitalOutput.cpp
Src/ST-LIB_LOW/ErrorHandler/: ErrorHandler.cpp
Src/ST-LIB_LOW/HalfBridge/: HalfBridge.cpp
Src/ST-LIB_LOW/Math/: Math.cpp
Src/ST-LIB_LOW/StateMachine/: StateMachine.cpp  StateOrder.cpp
Src/ST-LIB_LOW/Supercaps/: Supercaps.cpp
tests/: one.py
tools/: build.py
(+308 files in other folders)
